--- a/imaya/restapp/static/admin.html
+++ b/imaya/restapp/static/admin.html
@@ -12,6 +12,7 @@
             <a href="admin.html">ADMIN</a>
             <a href="contact.html">CONTACT</a>
         </div>
+        
         <div class="title">
             <p>YUMMIFY-MY YUMMIFY SQUAD</p>
         </div>
@@ -46,7 +47,7 @@
             <h2>Jeevi prakash</h2> 
             <p>HR manager</p>
         </div>
-    </div>t
+    </div>
         
       <div class="footer">&copy; HARSHINI.J(25011612)</div>  
     </body>
